<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/tv_username"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iv_upload"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tv_username"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/linearlayout_likecommentshare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_upload"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_like"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="false"
                    android:paddingStart="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_like"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/iv_comment"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    app:srcCompat="@drawable/ic_comment"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    app:srcCompat="@drawable/ic_share"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_total_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearlayout_likecommentshare"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:paddingStart="10dp"
                android:text="@string/tv_total_likes"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_tittleupload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_total_likes"
                android:fontFamily="@font/roboto"
                android:paddingStart="10dp"
                android:text="@string/tv_tittleupload"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

<!--            <TextView-->
<!--                android:id="@+id/tv_contentupload"-->
<!--                android:layout_width="280dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/tv_tittleupload"-->
<!--                android:layout_marginTop="-17dp"-->
<!--                android:layout_toEndOf="@id/tv_tittleupload"-->
<!--                android:fontFamily="@font/roboto"-->
<!--                android:paddingStart="20dp"-->
<!--                android:textColor="#000000"-->
<!--                tools:ignore="RtlSymmetry" />-->

            <TextView
                android:id="@+id/tv_totalcomments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tittleupload"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:paddingStart="10dp"
                android:text="@string/tv_totalcomments"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_aboutUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tittleupload"
                android:layout_marginStart="133dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@id/tv_totalcomments"
                android:fontFamily="@font/roboto"
                android:text="@string/tv_detail"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>